--- a/main-page.html
+++ b/main-page.html
@@ -2,9 +2,9 @@
 <link rel="import" href="about-me.html">
 <link rel="import" href="my-projects.html">
 <link rel="import" href="project-popup.html">
+<link rel="import" href="shared-styles.html">
 <link rel="import" href="resume-section.html">
 
-<link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="bower_components/app-route/app-location.html">
 <link rel="import" href="bower_components/app-route/app-route.html">
 <link rel="import" href="bower_components/neon-animation/neon-animated-pages.html">
@@ -12,17 +12,7 @@
 
 <dom-module id="main-page">
 <template>
-  <style>
-    :host {
-      --main-font: ElliScript;
-
-      --title-font: {
-        font-family: ElliScript;
-        font-size: 3em;
-        text-align: center;
-      }
-    }
-
+  <style is="custom-style">
     #mainContent {
       min-width: 790px;
       width: 80%;
@@ -53,7 +43,9 @@
   <top-bar></top-bar>
   <div id="mainContent">
     <about-me age="{{age}}" pc="{{pc}}"></about-me>
+
     <div class="separator"></div>
+
     <div id="projectsSection">
       <neon-animated-pages on-neon-animation-finish="_onNeonAnimationFinish"
           attr-for-selected="name"
@@ -69,7 +61,9 @@
         </project-popup>
       </neon-animated-pages>
     </div>
+
     <div class="separator"></div>
+    
     <resume-section last-updated="[[lastUpdated]]"></resume-section>
   </div>
 </template>
