--- a/project-popup.html
+++ b/project-popup.html
@@ -1,14 +1,15 @@
+<link rel="import" href="shared-styles.html">
+
 <link rel="import" href="bower_components/neon-animation/neon-shared-element-animatable-behavior.html">
 <link rel="import" href="bower_components/neon-animation/animations/hero-animation.html">
 <link rel="import" href="bower_components/neon-animation/animations/ripple-animation.html">
 <link rel="import" href="bower_components/neon-animation/animations/fade-out-animation.html">
-<link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="bower_components/iron-image/iron-image.html">
 
 
 <dom-module id="project-popup">
   <template>
-    <style is="custom-style" include="iron-flex iron-flex-alignment">
+    <style is="custom-style" include="shared-styles">
       :host {
         font-family: var(--main-font);
         font-size: 2em;
@@ -35,7 +36,6 @@
         padding: 20px;
         max-width: 80%;
         position: absolute;
-        /*z-index: 3;*/
       }
 
       #title {
@@ -49,15 +49,6 @@
       #image {
         width: 200px;
         height: 200px;
-      }
-
-      a {
-        text-decoration: none;
-        color: #C0362C;
-      }
-
-      a:hover {
-        color: #dd7169;
       }
 
       #imgWrap {
