--- a/project-popup.html
+++ b/project-popup.html
@@ -61,7 +61,7 @@
         <div id="imgWrap" class="layout vertical center-center">
           <iron-image
               id="image"
-              src="[[project.img]]"
+              src="/[[project.img]]"
               sizing="contain">
           </iron-image>
         </div>
