--- a/my-projects.html
+++ b/my-projects.html
@@ -40,7 +40,7 @@
     </div>
 
     <div class="contentWrapper horizontal layout center-justified wrap">
-      <template is="dom-repeat" items="[[projectsArray]]"" as="project">
+      <template is="dom-repeat" items="[[projectsArray]]" as="project">
         <project-card data="[[project]]"></project-card>
       </template>
     </div>
