--- a/resume-section.html
+++ b/resume-section.html
@@ -37,9 +37,7 @@
       is: 'resume-section',
 
       properties: {
-        lastUpdated: {
-          String
-        }
+        lastUpdated: String
       }
     });
   </script>
