--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="icon" type="image/ico" href="img/favicon.ico">
   <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
   <link rel="import" href="bower_components/polymer/polymer.html">
-  <link rel="import" href="main-page.html">
+  <link rel="import" href="src/main-page/main-page.html">
   <style>
     @font-face {
       font-family: ElliScript;
