--- a/src/main-page/main-page.html
+++ b/src/main-page/main-page.html
@@ -1,14 +1,14 @@
-<link rel="import" href="top-bar.html">
-<link rel="import" href="about-me.html">
-<link rel="import" href="my-projects.html">
-<link rel="import" href="project-popup.html">
-<link rel="import" href="shared-styles.html">
-<link rel="import" href="resume-section.html">
+<link rel="import" href="../top-bar/top-bar.html">
+<link rel="import" href="../about-me/about-me.html">
+<link rel="import" href="../my-projects/my-projects.html">
+<link rel="import" href="../project-popup/project-popup.html">
+<link rel="import" href="../shared-styles/shared-styles.html">
+<link rel="import" href="../resume-section/resume-section.html">
 
-<link rel="import" href="bower_components/app-route/app-location.html">
-<link rel="import" href="bower_components/app-route/app-route.html">
-<link rel="import" href="bower_components/neon-animation/neon-animated-pages.html">
-<link rel="import" href="bower_components/iron-resizable-behavior/iron-resizable-behavior.html">
+<link rel="import" href="../../bower_components/app-route/app-location.html">
+<link rel="import" href="../../bower_components/app-route/app-route.html">
+<link rel="import" href="../../bower_components/neon-animation/neon-animated-pages.html">
+<link rel="import" href="../../bower_components/iron-resizable-behavior/iron-resizable-behavior.html">
 
 <dom-module id="main-page">
 <template>
