--- a/src/my-projects/my-projects.html
+++ b/src/my-projects/my-projects.html
@@ -1,10 +1,10 @@
-<link rel="import" href="project-card.html">
-<link rel="import" href="shared-styles.html">
+<link rel="import" href="../project-card/project-card.html">
+<link rel="import" href="../shared-styles/shared-styles.html">
 
-<link rel="import" href="bower_components/neon-animation/neon-shared-element-animatable-behavior.html">
-<link rel="import" href="bower_components/neon-animation/animations/hero-animation.html">
-<link rel="import" href="bower_components/neon-animation/animations/ripple-animation.html">
-<link rel="import" href="bower_components/iron-resizable-behavior/iron-resizable-behavior.html">
+<link rel="import" href="../../bower_components/neon-animation/neon-shared-element-animatable-behavior.html">
+<link rel="import" href="../../bower_components/neon-animation/animations/hero-animation.html">
+<link rel="import" href="../../bower_components/neon-animation/animations/ripple-animation.html">
+<link rel="import" href="../../bower_components/iron-resizable-behavior/iron-resizable-behavior.html">
 
 <dom-module id="iron-resizable">
   <template>
