--- a/src/project-popup/project-popup.html
+++ b/src/project-popup/project-popup.html
@@ -1,10 +1,10 @@
-<link rel="import" href="shared-styles.html">
+<link rel="import" href="../shared-styles/shared-styles.html">
 
-<link rel="import" href="bower_components/neon-animation/neon-shared-element-animatable-behavior.html">
-<link rel="import" href="bower_components/neon-animation/animations/hero-animation.html">
-<link rel="import" href="bower_components/neon-animation/animations/ripple-animation.html">
-<link rel="import" href="bower_components/neon-animation/animations/fade-out-animation.html">
-<link rel="import" href="bower_components/iron-image/iron-image.html">
+<link rel="import" href="../../bower_components/neon-animation/neon-shared-element-animatable-behavior.html">
+<link rel="import" href="../../bower_components/neon-animation/animations/hero-animation.html">
+<link rel="import" href="../../bower_components/neon-animation/animations/ripple-animation.html">
+<link rel="import" href="../../bower_components/neon-animation/animations/fade-out-animation.html">
+<link rel="import" href="../../bower_components/iron-image/iron-image.html">
 
 
 <dom-module id="project-popup">
