--- a/src/resume-section/resume-section.html
+++ b/src/resume-section/resume-section.html
@@ -1,4 +1,4 @@
-<link rel="import" href="shared-styles.html">
+<link rel="import" href="../shared-styles/shared-styles.html">
 
 <dom-module id="resume-section">
   <template>
