--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
   <title>Elliott Marquez</title>
-  <link rel="icon" type="image/ico" href="img/favicon.ico">
+  <link rel="icon" type="image/ico" href="src/img/favicon.ico">
   <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
   <link rel="import" href="bower_components/polymer/polymer.html">
   <link rel="import" href="src/main-page/main-page.html">
   <style>
     @font-face {
       font-family: ElliScript;
-      src: url(files/ElliScript.ttf);
+      src: url(src/files/ElliScript.ttf);
     }
 
     body {
