--- a/src/about-me/about-me.html
+++ b/src/about-me/about-me.html
@@ -45,7 +45,7 @@
         Heya there, I'm Elliott, a {{age}} year old Software Engineer from South Texas living in
 
         <a href="http://colors.findthedata.com/l/923/International-Orange-Golden-Gate-Bridge" title="Google is great">
-          San Francisco<span><img class="inline" src="/img/ggbridge.png"></span><!--
+          San Francisco<span><img class="inline" src="../img/ggbridge.png"></span><!--
      --></a>.
       </div>
     </div>
@@ -55,7 +55,7 @@
     </div>
     <div class="contentWrapper">
       <div class="content">
-        I do a lot of front-end software development for<google-text></google-text>'s <a href="https://www.polymer-project.org">Polymer <span><img class="inline" src="/img/polymer.png"></span></a> team because I work there :)
+        I do a lot of front-end software development for<google-text></google-text>'s <a href="https://www.polymer-project.org">Polymer <span><img class="inline" src="../img/polymer.png"></span></a> team because I work there :)
       </div>
     </div>
 
@@ -91,7 +91,7 @@
     </div>
     <div class="contentWrapper">
       <div class="content">Something like this:</div>
-      <img src="/img/profile.jpg" id="profile">
+      <img src="../img/profile.jpg" id="profile">
       <div class="content horizontal flex layout">
         <div class="flex layout">Kinda...</div>
         <div class="flex layout right">Photo Cred: <a href$="[[pc.website]]">{{pc.photographer}}</a></div>
