--- a/src/resume-section/resume-section.html
+++ b/src/resume-section/resume-section.html
@@ -28,7 +28,7 @@
       <div id="resumeWrapper" class="layout vertical center-center">
         <iframe id="resume" src="https://docs.google.com/gview?url=https://personalsite-142006.firebaseapp.com/files/resume.pdf&embedded=true" frameborder="0"></iframe>
       </div>
-      <div>Direct download <a href="/files/resume.pdf">here</a>.</div>
+      <div>Direct download <a href="../files/resume.pdf">here</a>.</div>
       <div>Last updated [[lastUpdated]]</div> 
     </div>
   </template>
