--- a/src/project-card/project-card.html
+++ b/src/project-card/project-card.html
@@ -24,7 +24,7 @@
   </style>
   
   <div id="wrapper">
-    <iron-image src="src/{{data.img}}" sizing="contain"></iron-image>
+    <iron-image src="/src/{{data.img}}" sizing="contain"></iron-image>
   </div>
 </template>
 <script>
