--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Elliott Marquez</title>
-  <link rel="icon" type="image/ico" href="src/img/favicon.ico">
+  <link rel="icon" type="image/ico" href="/src/img/favicon.ico">
   <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
   <link rel="import" href="bower_components/polymer/polymer.html">
   <link rel="import" href="src/main-page/main-page.html">
