--- a/src/resume-section/resume-section.html
+++ b/src/resume-section/resume-section.html
@@ -26,7 +26,7 @@
     <div class="title">Resume</div>
     <div>
       <div id="resumeWrapper" class="layout vertical center-center">
-        <iframe id="resume" src="https://docs.google.com/gview?url=https://personalsite-142006.firebaseapp.com/files/resume.pdf&embedded=true" frameborder="0"></iframe>
+        <iframe id="resume" src="https://docs.google.com/gview?url=https://elliottmarquez.com/src/files/resume.pdf&embedded=true" frameborder="0"></iframe>
       </div>
       <div>Direct download <a href="../files/resume.pdf">here</a>.</div>
       <div>Last updated [[lastUpdated]]</div> 
