exporting assets correctly

--- a/src/project-popup/project-popup.html
+++ b/src/project-popup/project-popup.html
@@ -61,7 +61,7 @@
         <div id="imgWrap" class="layout vertical center-center">
           <iron-image
               id="image"
-              src="/src/[[project.img]]"
+              src="/assets/[[project.img]]"
               sizing="contain">
           </iron-image>
         </div>
