--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
   <meta name="theme-color" content="#000000">
   <link rel="manifest" href="/manifest.json">
-  <link rel="icon" type="image/ico" href="/src/img/favicon.ico">
+  <link rel="icon" type="image/ico" href="/assets/img/favicon.ico">
 
   <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
   <link rel="import" href="bower_components/polymer/polymer.html">
@@ -13,7 +13,7 @@
   <style>
     @font-face {
       font-family: ElliScript;
-      src: url(src/files/ElliScript.ttf);
+      src: url(/assets/files/ElliScript.ttf);
     }
 
     body {
