--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link rel="manifest" href="/manifest.json">
   <link rel="icon" type="image/ico" href="/assets/img/favicon.ico">
 
-  <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
+  <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="bower_components/polymer/polymer.html">
-  <link rel="import" href="src/main-page/main-page.html">
+  <link rel="import" href="src/main-page.html">
   <style>
     @font-face {
       font-family: ElliScript;
