--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="bower_components/polymer/polymer.html">
-  <link rel="import" href="src/main-page.html">
+  <link rel="import" href="src/elliott-main-page.html">
   <style>
     @font-face {
       font-family: ElliScript;
@@ -23,7 +23,7 @@
   </style>
 </head>
 <body>
-  <main-page></main-page>
+  <elliott-main-page></elliott-main-page>
 
   <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
