--- a/src/elliott-shared-styles.html
+++ b/src/elliott-shared-styles.html
@@ -1,8 +1,6 @@
-<link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
-
-<dom-module id="shared-styles">
+<dom-module id="elliott-shared-styles">
   <template>
-    <style is="custom-style" include="iron-flex iron-flex-alignment">
+    <style>
       :host {
         --main-font: ElliScript;
 
@@ -14,7 +12,7 @@
       }
 
       .title {
-        @apply(--title-font);
+        @apply --title-font;
       }
 
       .big.title {
@@ -32,9 +30,4 @@
       }
     </style>
   </template>
-  <script>
-    Polymer({
-      is: 'shared-styles'
-    });
-  </script>
 </dom-module>
