--- a/src/elliott-about-me.html
+++ b/src/elliott-about-me.html
@@ -56,7 +56,7 @@
     </div>
     <div class="contentWrapper">
       <div class="content">
-        Heya there, I'm Elliott, a [[age}} year]]ld Software Engineer from South Texas living in
+        Heya there, I'm Elliott, a [[age]] year old Software Engineer from South Texas living in
 
         <a href="http://colors.findthedata.com/l/923/International-Orange-Golden-Gate-Bridge" title="Google is great">
           San Francisco<span><img class="inline" src="/assets/img/ggbridge.png"></span><!--
