--- a/src/elliott-shared-styles.html
+++ b/src/elliott-shared-styles.html
@@ -2,10 +2,10 @@
   <template>
     <style>
       :host {
-        --main-font: ElliScript;
+        --main-font: ElliScript, "Comic Sans MS", cursive, sans-serif;
 
         --title-font: {
-          font-family: ElliScript;
+          font-family: ElliScript, "Comic Sans MS", cursive, sans-serif;
           font-size: 3em;
           text-align: center;
         }
