--- a/src/elliott-shared-styles.html
+++ b/src/elliott-shared-styles.html
@@ -5,7 +5,7 @@
         --main-font: ElliScript, "Comic Sans MS", cursive, sans-serif;
 
         --title-font: {
-          font-family: ElliScript, "Comic Sans MS", cursive, sans-serif;
+          font-family: var(--main-font);
           font-size: 3em;
           text-align: center;
         }
