--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   </style>
 </head>
 <body>
-  <elliott-main-page></elliott-main-page>
+  <div id="wrapper">
+    <elliott-main-page></elliott-main-page>
+  </div>
 
   <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
