--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/ico" href="/assets/img/favicon.ico">
 
   <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-  <link r="import" href="bower_components/polymer/polymer.html">
+  <link rel="import" href="bower_components/polymer/polymer.html">
   <link rel="import" href="src/elliott-main-page.html">
   <style>
     body {
