goodbye other browsers

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
   </style>
 </head>
 <body>
+  <div id="warning">
+    If you see this, then you should probably switch to Chrome. Because I built this website using
+    lots of things that Firefox and Safari don't handle pretty well... like at all. I promise it'll
+    be all happy again once I put some more time into this dumb site.
+  </div>
   <div id="wrapper">
     <elliott-main-page></elliott-main-page>
   </div>
