--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
   </style>
 </head>
 <body>
-  <div id="warning">
+  <div id="warning"  style="background-color:black;color:white;">
     If you see this, then you should probably switch to Chrome. Because I built this website using
-    lots of things that Firefox and Safari don't handle pretty well... like at all. I promise it'll
-    be all happy again once I put some more time into this dumb site.
+    lots of things that Firefox and Safari don't handle pretty well... like at all.
   </div>
   <div id="wrapper">
     <elliott-main-page></elliott-main-page>
@@ -41,12 +40,12 @@
           }
         };
         xhr.send();
-      }
+      };
 
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
       ga('create', 'UA-49979467-3', 'auto');
       ga('send', 'pageview');
     </script>
