--- a/src/elliott-main-page.html
+++ b/src/elliott-main-page.html
@@ -58,9 +58,7 @@
 
 <script>
   var isChrome = !!window.chrome && !!window.chrome.webstore;
-  if (!isChrome) {
-    this.parentNode.removeChild(this);
-  } else {
+  if (isChrome) {
     warning.parentNode.removeChild(warning);
   }
   class MainPage extends Polymer.Element {
