resume isn't as jank

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 </head>
 <body>
   <div id="warning"  style="background-color:black;color:white;">
-    If you see this, then you should probably switch to Chrome. Because I built this website using
-    lots of things that Firefox and Safari don't handle pretty well... like at all.
+    If you see this, then you should probably switch to Chrome. Because I spent a long time trying
+    to get web animations, flexbox, and scrolling to work on Safari and Firefox that I'm just super
+    angsty about these browsers right now, okay?
   </div>
   <div id="wrapper">
     <elliott-main-page></elliott-main-page>
