--- a/src/elliott-resume-section.html
+++ b/src/elliott-resume-section.html
@@ -14,13 +14,13 @@
           width: 100%;
           padding-bottom: 130%;
           border: 1px solid black;
-          display: flex;
-          justify-content: center;
         }
 
         #resume {
           position: absolute;
-          top: 2%;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
           width: 96%;
           height: 96%;
         }
