--- a/src/elliott-main-page.html
+++ b/src/elliott-main-page.html
@@ -80,8 +80,8 @@
           pc: {
             type: Object,
             value: {
-              photographer: 'Andre',
-              website: 'http://andreaboulian.com'
+              photographer: 'Sean Ebsworth Barnes',
+              website: 'http://www.seanebsworthbarnes.com/Clients/Google-Polymer-London-2016/Keynotes-Monday-Polymer16/n-x6mZp5/i-44ZTM88'
             }
           },
 
