--- a/src/elliott-about-me.html
+++ b/src/elliott-about-me.html
@@ -47,68 +47,69 @@
     </style>
   </custom-style>
 
-  <div class="big title">
-    About Me
-  </div>
-  <div id="asdf">
-    <div class="title">
-      What am I?
+  <div id="elementWrapper">
+    <div class="big title">
+      About Me
     </div>
-    <div class="contentWrapper">
-      <div class="content">
-        Heya there, I'm Elliott, a [[age]] year old Software Engineer from South Texas living in
-
-        <a href="http://colors.findthedata.com/l/923/International-Orange-Golden-Gate-Bridge" title="Google is great">
-          San Francisco<span><img class="inline" src="/assets/img/ggbridge.png"></span><!--
-     --></a>.
+    <div>
+      <div class="title">
+        What am I?
       </div>
-    </div>
-
-    <div class="title">
-      What do I do?
-    </div>
-    <div class="contentWrapper">
-      <div class="content">
-        I do a lot of front-end software development for<elliott-google-text></elliott-google-text>'s <a href="https://www.polymer-project.org">Polymer <span><img class="inline" src="/assets/img/polymer.png"></span></a> team because I work there :)
+      <div class="contentWrapper">
+        <div class="content">
+          Heya there, I'm Elliott, a [[age]] year old Software Engineer from South Texas living in
+          <a href="http://colors.findthedata.com/l/923/International-Orange-Golden-Gate-Bridge" title="Google is great">
+            San Francisco<span><img class="inline" src="/assets/img/ggbridge.png"></span><!--
+      --></a>.
+        </div>
       </div>
-    </div>
 
-    <div class="title">
-      What did I do?
-    </div>
-    <div class="contentWrapper">
-      <div class="content">
-        I used to do a bunch of book-and-tears-learning in college at <a href="http://web.mit.edu/">MIT</a> in Cambridge, Massachusetts and ended up getting a Bachelors in Computer Science! I also learned other things there like, German, physics, how to burn chicken, Incan history, and other random fun stuff.
+      <div class="title">
+        What do I do?
       </div>
-    </div>
-
-    <div class="title">
-      What did I do before that?
-    </div>
-    <div class="contentWrapper">
-      <div class="content">
-        Before that I went to a <a href="http://nisd.net/healthcareers/">health-oriented high school</a> and learned CPR, Latin, how to fiddle with a calculator, and that I really did not want to be a doctor but <a href="https://xkcd.com/722/">a math person that pushes buttons</a>.
+      <div class="contentWrapper">
+        <div class="content">
+          I do a lot of front-end software development for<elliott-google-text></elliott-google-text>'s <a href="https://www.polymer-project.org">Polymer <span><img class="inline" src="/assets/img/polymer.png"></span></a> team because I work there :)
+        </div>
       </div>
-    </div>
 
-    <div class="title">
-      What do I like?
-    </div>
-    <div class="contentWrapper">
-      <div class="content">
-        I like computers, video games, <a href="https://translate.google.com/#de/en/Ich%20mag%20Sprachen%20lernen.">Sprachen lernen</a>, Netflix, Vampire Weekend, terrible horror movies, musicals, Mozart, and men. This is not all inclusive; please stalk me on social media for more.
+      <div class="title">
+        What did I do?
       </div>
-    </div>
+      <div class="contentWrapper">
+        <div class="content">
+          I used to do a bunch of book-and-tears-learning in college at <a href="http://web.mit.edu/">MIT</a> in Cambridge, Massachusetts and ended up getting a Bachelors in Computer Science! I also learned other things there like, German, physics, how to burn chicken, Incan history, and other random fun stuff.
+        </div>
+      </div>
 
-    <div class="title">
-      What do I look like?
-    </div>
-    <div class="contentWrapper">
-      <div class="content">Something like this:</div>
-      <img src="/assets/img/profile.jpg" id="profile">
-      <div id="photoCred" class="content">
-        <div>Kinda...</div>
-        <div class="right">Photo Cred: <a href$="[[pc.website]]">[[pc.photographer]]</a></div>
+      <div class="title">
+        What did I do before that?
+      </div>
+      <div class="contentWrapper">
+        <div class="content">
+          Before that I went to a <a href="http://nisd.net/healthcareers/">health-oriented high school</a> and learned CPR, Latin, how to fiddle with a calculator, and that I really did not want to be a doctor but <a href="https://xkcd.com/722/">a math person that pushes buttons</a>.
+        </div>
+      </div>
+
+      <div class="title">
+        What do I like?
+      </div>
+      <div class="contentWrapper">
+        <div class="content">
+          I like computers, video games, <a href="https://translate.google.com/#de/en/Ich%20mag%20Sprachen%20lernen.">Sprachen lernen</a>, Netflix, Vampire Weekend, terrible horror movies, musicals, Mozart, and men. This is not all inclusive; please stalk me on social media for more.
+        </div>
+      </div>
+
+      <div class="title">
+        What do I look like?
+      </div>
+      <div class="contentWrapper">
+        <div class="content">Something like this:</div>
+        <img src="/assets/img/profile.jpg" id="profile">
+        <div id="photoCred" class="content">
+          <div>Kinda...</div>
+          <div class="right">Photo Cred: <a href$="[[pc.website]]">[[pc.photographer]]</a></div>
+        </div>
       </div>
     </div>
   </div>
