--- a/src/elliott-resume-section.html
+++ b/src/elliott-resume-section.html
@@ -26,14 +26,16 @@
         }
       </style>
     </custom-style>
-
-    <div class="title">Resume</div>
-    <div>
-      <div id="resumeWrapper">
-        <iframe id="resume" src="https://docs.google.com/gview?url=https://elliottmarquez.com/assets/files/resume.pdf&embedded=true" frameborder="0"></iframe>
+    
+    <div id="elementWrapper">
+      <div class="title">Resume</div>
+      <div>
+        <div id="resumeWrapper">
+          <iframe id="resume" src="https://docs.google.com/gview?url=https://elliottmarquez.com/assets/files/resume.pdf&embedded=true" frameborder="0"></iframe>
+        </div>
+        <div>Direct download <a href="/assets/files/resume.pdf">here</a>.</div>
+        <div>Last updated [[lastUpdated]]</div> 
       </div>
-      <div>Direct download <a href="/assets/files/resume.pdf">here</a>.</div>
-      <div>Last updated [[lastUpdated]]</div> 
     </div>
   </template>
   <script>
