--- a/src/elliott-shared-styles.html
+++ b/src/elliott-shared-styles.html
@@ -9,6 +9,17 @@
           font-size: 3em;
           text-align: center;
         }
+
+        --common-margins: {
+          min-width: 790px;
+          width: 80%;
+          margin: 0 auto;
+          margin-top: 2em;
+        }
+      }
+
+      #elementWrapper {
+        @apply --common-margins;
       }
 
       .title {
