--- a/src/elliott-project-popup.html
+++ b/src/elliott-project-popup.html
@@ -16,11 +16,12 @@
         :host {
           position: absolute;
           justify-content: center;
-          width: 100%;
-          height: 100%;
+          width: 100vw;
+          height: 100vh;
           font-family: var(--main-font);
           font-size: 2em;
           z-index: 4;
+          top: 0;
         }
 
         #wrapper {
@@ -186,7 +187,7 @@
         
         var a = scrollTo({
           left: 0,
-          top: this.parentNode.offsetTop,
+          top: 0,
           behavior:'smooth'
         });
 
