prevents zooming out when expanding a project

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       margin: 0 0 0 0;
       min-width: 790px;
     }
+
+    #wrapper {
+      position: relative;
+    }
   </style>
 </head>
 <body>
