hmg stop it safari and FF, just stop!

--- a/index.html
+++ b/index.html
@@ -14,20 +14,22 @@
     body {
       margin: 0 0 0 0;
       min-width: 790px;
+      height: 100vh;
     }
 
     #wrapper {
       position: relative;
+      height: 100%;
     }
   </style>
 </head>
 <body>
-  <div id="warning"  style="background-color:black;color:white;">
-    If you see this, then you should probably switch to Chrome. Because I spent a long time trying
-    to get web animations, flexbox, and scrolling to work on Safari and Firefox that I'm just super
-    angsty about these browsers right now, okay?
-  </div>
   <div id="wrapper">
+    <div id="warning"  style="background-color:black;color:white;">
+      If you see this, then you should probably switch to Chrome. Because I spent a long time trying
+      to get web animations, flexbox, and scrolling to work on Safari and Firefox that I'm just super
+      angsty about these browsers right now, okay?
+    </div>
     <elliott-main-page></elliott-main-page>
   </div>
 
