--- a/src/elliott-pages.html
+++ b/src/elliott-pages.html
@@ -39,7 +39,7 @@
       }
 
       _select(newSelected) {
-        let distributedChildren = this.$.slot.assignedNodes();
+        let distributedChildren = this.children;
         
         let oldSelectedChild;
         let newSelectedChild;
